--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>Test site changed</title>
+	<title>GIT exercise</title>
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
